--- a/app/src/main/res/layout/activity_pre_login.xml
+++ b/app/src/main/res/layout/activity_pre_login.xml
@@ -11,9 +11,11 @@
 
     <ImageView
         android:id="@+id/activity_pre_login_app_logo_img"
-        android:layout_width="150dp"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         android:layout_height="150dp"
-        app:srcCompat="@drawable/app_logo" />
+        app:srcCompat="@drawable/logo_carboy" />
 
     <TextView
         android:id="@+id/activity_pre_login_app_logo_tv"
