--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -111,6 +111,7 @@
                 android:layout_margin="10dp"
                 android:backgroundTint="@color/button"
                 android:text="Verify"
+                android:clickable="false"
                 android:visibility="gone"
                 android:textSize="18sp" />
 
